--- a/bitnami/kafka/values.yaml
+++ b/bitnami/kafka/values.yaml
@@ -184,7 +184,7 @@ service:
 ##
 persistence:
   enabled: true
-  # storageClass: "-"
+    storageClass: "-"
   accessModes:
     - ReadWriteOnce
   size: 8Gi
